--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ url: "https://sunlei0227.github.io" # the base hostname & protocol for your site
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Kui Xu # add your name
+author: lei sun # add your name
 author-img: lei.jpeg # add your photo
 about-author: kui, kui xu, tsinghua, beijing, cryo-em, density-map, a-2-net, vrmol, prismnet, 3d-vision, rna-structure. # add description
-twitter: kuixut# add your Twitter handle
+twitter: # add your Twitter handle
 facebook: # add your Facebook handle
-github: kuixu # add your Github handle
+github: sunlei0227 # add your Github handle
 linkedin: # add your Linkedin handle
-email: kuixu.cs@gmail.com
+email: sunlei0227@gmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
