--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: I'm Lei
 description: > # this means to ignore newlines until "baseurl:"
-  lei, lei sun, tsinghua, beijing, SARS-CoV-2, RNA secondary structure, RNA sequencing, deep learning, prismnet, 3d-vision, rna-structure.
+  lei, lei sun, tsinghua, beijing, SARS-CoV-2, RNA secondary structure, RNA sequencing, deep learning, prismnet, rna-structure.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sunlei0227.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -9,12 +9,12 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: lei sun # add your name
 author-img: lei.jpeg # add your photo
-about-author: kui, kui xu, tsinghua, beijing, cryo-em, density-map, a-2-net, vrmol, prismnet, 3d-vision, rna-structure. # add description
+about-author: 孙磊，lei, lei sun, tsinghua, beijing, SARS-CoV-2, RNA secondary structure, RNA sequencing, deep learning, prismnet, rna-structure. # add description
 twitter: # add your Twitter handle
 facebook: # add your Facebook handle
 github: sunlei0227 # add your Github handle
 linkedin: # add your Linkedin handle
-email: sunlei0227@gmail.com
+email: sunlei0227@hotmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
