--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: sunlei0227@hotmail.com
 discus-identifier: mr-brown # add your discus identifier
 
 # Tracker
-google_analytics: "359371823": # Google Analytics
+google_analytics: "G-W5JLP6SYB8": # Google Analytics
 
 # Build Settings
 markdown: kramdown
